--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: ion-book
 email: ing.carlosandresrojas@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Jekyll Theme Demo
+description: "Blog sobre Ionic Framework en Español"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://carlosrojaso.github.io" # the base hostname & protocol for your site
+url: "http://ion-book.com" # the base hostname & protocol for your site
 twitter_username: carlosrojas_o
 github_username: carlosrojaso
 
