--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter_username: carlosrojas_o
 github_username: carlosrojaso
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 
 redcarpet:
