--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 # Site settings
 title: ion-book
-email: ing.carlosandresrojas@gmail.com
 description: "Blog sobre Ionic Framework en Español"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://ion-book.com" # the base hostname & protocol for your site
-twitter_username: carlosrojas_o
-github_username: carlosrojaso
 bookurl: "http://j.mp/1Us5Y5B"
 
 # Build settings
@@ -14,3 +11,17 @@ markdown_ext:  markdown,mkdown,mkdn,mkd,md
 
 redcarpet:
   extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "fenced_code_blocks"]
+  
+authors:
+  nicobytes:
+    name: Nicolas Molina
+    image: 60fd5218fff6927c0ed376cce01c5460
+    web: http://www.richtaur.com/
+    twitter: nicobytes
+    github: nicobytes
+  carlosrojas:
+    name: Carlos Rojas
+    image: 76dbcc74021b8039f14c7b583978b56d
+    web: http://nicobytes.com
+    twitter: carlosrojas_o
+    github: carlosrojas_o
