--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,11 @@ authors:
   nicobytes:
     name: Nicolas Molina
     website: "http://www.nicobytes.com/"
+    avatar: "http://i.imgur.com/x1o2zyi.jpg"
   carlosrojas:
     name: Carlos Rojas
     website: "http://www.carlosrojasblog.com/"
+    avatar: "http://i.imgur.com/ecNB0is.png"
 
 social_links: 
   - url: "http://goo.gl/forms/ZCEc0cr3jydgK2wv1"
