--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ authors:
   nicobytes:
     name: Nicolas Molina
     url: "/nicobytes"
-    avatar: "http://i.imgur.com/x1o2zyi.jpg"
+    avatar: "http://i.imgur.com/mwT2iig.png"
     website: "http://nicobytes.com"
     bio: "Soy desarrollador web especializado en el área de FrontEnd & HybripApps, enfocado en aprendizaje de JS y al desarrollo de apps con Angular2 y Ionic2. Mis pasiones son el desarrollo de productos, compartir con las comunidades de desarrollo y viajar por todo el mundo."
     social_links:
