--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,26 @@ authors:
         icon: "fa-linkedin"
       - link: "https://www.facebook.com/daniel.l.sanchez.501"
         icon: "fa-facebook"
+  the_luchillo:
+    name: "Carlos Esteban Lopez"
+    url: "/the_luchillo"
+    avatar: "http://i.cubeupload.com/pHepUB.jpg"
+    bio: "Soy Desarrollador de aplicaciones digitales, auto-didacta, amante de la tecnologia y el arte digital, estudiante de Ing. de Sistemas, 6 años de estudio auto-didacta y desarrollo profesionalmente desde 2014, me gusta aportar a la comunidad con cursos de desarrollo, proyectos open source y en foros de desarrollo."
+    social_links:
+      - link: "https://twitter.com/the_luchillo"
+        icon: "fa-twitter"
+      - link: "https://github.com/Luchillo"
+        icon: "fa-github"
+  unjavascripter:
+    name: "Diego Coy"
+    url: "/unjavascripter"
+    avatar: "http://i.cubeupload.com/fiMbBz.png"
+    bio: "I spend my time learning about new technologies and coding. I really enjoy developing web applications using JavaScript. I'm currently working with (and loving) AngularJS. I founded a group where people can learn and share about AngularJS in Colombia, there I'm the organizer and sometimes speaker. I've been enjoying teaching people about new cool technologies "
+    social_links:
+      - link: "https://twitter.com/unjavascripter"
+        icon: "fa-twitter"
+      - link: "https://github.com/unjavascripter"
+        icon: "fa-github"
 
 social_links: 
   - url: "https://twitter.com/ion_book"
