--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,6 @@ social_links:
 
 publications:
   - url: "http://www.paywithapost.de/pay?id=b1b5bde8-da59-4bc4-b6f9-1b62231c2884"
-    title: "Contruye un App de Fotos"
+    title: "Construye un App de Fotos"
     cover: "http://i.cubeupload.com/xvlIA6.png"
     summaty: "Deseas realizar un App de Fotos con Ionic 1, este es tu punto de partida."
