:bug: fix errors

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # ==============================================================
 # General
 title: ion-book
-description: "Blog sobre Ionic Framework en Español"
+description: "Aprende Ionic 2 y desarrolla increibles apps para Android y IOS."
 keywords: "asas,as"
 baseurl: "/"
-urlblog: '/blog'
-url: "http://ion-book.com"
-cover: "http://i.imgur.com/cfKvAxi.jpg"
+url: "https://ion-book.firebaseapp.com"
+urlblog: 'blog'
+cover: "images/cover.jpg"
 timezone: "America/Bogota"
 markdown: kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
-permalink: /blog/:categories/:title/
+permalink: blog/:categories/:title/
 redcarpet:
   extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "fenced_code_blocks"]
 sass:
@@ -38,8 +38,8 @@ menu_header:
     url: '/blog'
     target: '_self'
   - title: Cursos
-    url: '/talks'
-    target: '_self'
+    url: 'http://bootcampwithus.usefedora.com/'
+    target: '_blank'
 # ==============================================================
 # Menu Footer
 menu_footer:
@@ -50,7 +50,10 @@ menu_footer:
     url: '/blog'
     target: '_self'
   - title: Cursos
-    url: '/talks'
+    url: 'http://bootcampwithus.usefedora.com/'
+    target: '_blank'
+  - title: Autores
+    url: '/blog/authors'
     target: '_self'
 # ==============================================================
 # Social Links
@@ -109,33 +112,33 @@ home:
 # ==============================================================
 # Authors
 authors:
-  nicobytes:
+  - id: 'nicobytes'
     name: Nicolas Molina
-    url: "/nicobytes"
+    url: "/blog/authors/nicobytes"
     avatar: "http://i.imgur.com/mwT2iig.png"
     website: "http://nicobytes.com"
     bio: "Soy desarrollador web especializado en el área de FrontEnd & HybripApps, enfocado en aprendizaje de JS y al desarrollo de apps con Angular2 y Ionic2. Mis pasiones son el desarrollo de productos, compartir con las comunidades de desarrollo y viajar por todo el mundo."
     social_links:
       - link: "https://twitter.com/nicobytes"
-        icon: "fa-twitter"
+        icon: "icon-social-twitter"
       - link: "https://github.com/nicobytes"
-        icon: "fa-github"
+        icon: "icon-social-octocat"
       - link: "https://co.linkedin.com/in/nicobytes"
-        icon: "fa-linkedin"
+        icon: "icon-linkedin"
       - link: "https://www.facebook.com/nicolas.molina.127"
-        icon: "fa-facebook"
-  carlosrojas:
+        icon: "icon-social-facebook"
+  - id: 'carlosrojas'
     name: Carlos Rojas
-    url: "/carlosrojas"
+    url: "/blog/authors/carlosrojas"
     avatar: "http://i.imgur.com/ecNB0is.png"
     website: "http://www.carlosrojasblog.com/"
     bio: "Soy un creativo, organizado, autodidacta emprendedor y líder. Disfruto de enseñar a las personas a programar."
     social_links:
       - link: "https://twitter.com/carlosrojas_o"
         icon: "fa-twitter"
-  daniel_lsanchez:
+  - id: "daniel_lsanchez"
     name: "Daniel Londoño Sanchez"
-    url: "/daniel_lsanchez"
+    url: "/blog/authors/daniel_lsanchez"
     avatar: "http://i.cubeupload.com/lIAZlV.png"
     bio: "Soy desarrollador de software enfocado en especializarme en desarrollo web y móvil, me gusta ayudar a las personas y dar el conocimiento que adquiero sin nada a cambio. Me apasiono por construir productos innovadores y que ayuden a la sociedad, me gustan las motos y salir a viajar en ellas."
     social_links:
@@ -145,29 +148,9 @@ authors:
         icon: "fa-linkedin"
       - link: "https://www.facebook.com/daniel.l.sanchez.501"
         icon: "fa-facebook"
-  unjavascripter:
-    name: "Diego Coy"
-    url: "/unjavascripter"
-    avatar: "http://i.cubeupload.com/fiMbBz.png"
-    bio: "I spend my time learning about new technologies and coding. I really enjoy developing web applications using JavaScript. I'm currently working with (and loving) AngularJS. I founded a group where people can learn and share about AngularJS in Colombia, there I'm the organizer and sometimes speaker. I've been enjoying teaching people about new cool technologies "
-    social_links:
-      - link: "https://twitter.com/unjavascripter"
-        icon: "fa-twitter"
-      - link: "https://github.com/unjavascripter"
-        icon: "fa-github"
-  javebratt:
-    name: "Jorge Vergara"
-    url: "/javebratt"
-    avatar: "https://s9.postimg.org/fhmw4iggf/Iu_N5_UI0o.jpg"
-    bio: "Ayudo a emprendedores que están atacando proyectos de impacto social a planear y construir la primera versión de su aplicación móvil para que puedan salir al mercado rápido. Ayudo a desarrolladores de Ionic2 a usar esos conocimientos para construir aplicaciones basadas en Firebase."
-    social_links:
-      - link: "https://twitter.com/javebratt"
-        icon: "fa-twitter"
-      - link: "https://facebook.com/javebrattDev"
-        icon: "fa-facebook"
-  mayrititis:
+  - id: "mayrititis"
     name: "Mayra Rodríguez"
-    url: "/mayrititis"
+    url: "/blog/authors/mayrititis"
     avatar: "https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/4/f/f/8/600_454640472.jpeg"
     website: "http://mayrarodriguez.me/"
     bio: "Soy Ingeniera en Computación egresada de la Universidad Fermín Toro, Cabudare Edo. Lara. Me dedico al Desarrollo Web Full Stack y Móvil de manera Freelance. Me siento aficionada por el UX y el UI, así como también el desarrollo de aplicaciones innovadoras."
@@ -177,6 +160,26 @@ authors:
       - link: "https://www.linkedin.com/in/mayrarodriguez1709"
         icon: "fa-linkedin"
       - link: "https://www.facebook.com/mayrititis"
+        icon: "fa-facebook"
+  - id: "unjavascripter"
+    name: "Diego Coy"
+    url: "/blog/authors/unjavascripter"
+    avatar: "http://i.cubeupload.com/fiMbBz.png"
+    bio: "I spend my time learning about new technologies and coding. I really enjoy developing web applications using JavaScript. I'm currently working with (and loving) AngularJS. I founded a group where people can learn and share about AngularJS in Colombia, there I'm the organizer and sometimes speaker. I've been enjoying teaching people about new cool technologies "
+    social_links:
+      - link: "https://twitter.com/unjavascripter"
+        icon: "fa-twitter"
+      - link: "https://github.com/unjavascripter"
+        icon: "fa-github"
+  - id: "javebratt"
+    name: "Jorge Vergara"
+    url: "/javebratt"
+    avatar: "https://s9.postimg.org/fhmw4iggf/Iu_N5_UI0o.jpg"
+    bio: "Ayudo a emprendedores que están atacando proyectos de impacto social a planear y construir la primera versión de su aplicación móvil para que puedan salir al mercado rápido. Ayudo a desarrolladores de Ionic2 a usar esos conocimientos para construir aplicaciones basadas en Firebase."
+    social_links:
+      - link: "https://twitter.com/javebratt"
+        icon: "fa-twitter"
+      - link: "https://facebook.com/javebrattDev"
         icon: "fa-facebook"
 # ==============================================================
 # Publications
