--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # General
 title: ion-book
 description: "Aprende Ionic 2 y desarrolla increibles apps para Android y IOS."
-keywords: "asas,as"
+keywords: "ion-book,html5,javascript,mobile,ionic,hybrid,phonegap,cordova,native,ios,android,angularjs,ionic 2,angular 2,curso de ionic 2, aprender ionic 2,ionic framework,hacer aplicaciones con ionic,aplicaciones hibridas"
 baseurl: "/"
 url: "https://www.ion-book.com/"
 urlblog: 'https://www.ion-book.com/blog'
@@ -15,6 +15,7 @@ redcarpet:
   extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "fenced_code_blocks"]
 sass:
     style: compressed
+excerpt_separator: <!--summary-->
 # ==============================================================
 # Banner Course
 banner_course:
@@ -187,15 +188,15 @@ publications:
   - url: "http://www.paywithapost.de/pay?id=b1b5bde8-da59-4bc4-b6f9-1b62231c2884"
     title: "Construye un App de Fotos"
     cover: "http://i.cubeupload.com/xvlIA6.png"
-    summaty: "Deseas realizar un App de Fotos con Ionic 1, este es tu punto de partida."
+    summary: "Deseas realizar un App de Fotos con Ionic 1, este es tu punto de partida."
   - url: "http://www.paywithapost.de/pay?id=356c87df-fcf3-4b7c-baa8-dec66570445d"
     title: "Construye un App de Tareas"
     cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/ebooks%2FEbook.png?alt=media"
-    summaty: "Realiza un App de Tareas con Ionic 1, manejando tabs"
+    summary: "Realiza un App de Tareas con Ionic 1, manejando tabs"
   - url: "http://www.paywithapost.de/pay?id=29729e3f-6765-4e1f-8ee1-84bba161feec"
     title: "Construye un App para eventos"
     cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-events%2FccC0xr.png?alt=media"
-    summaty: "Realiza un App para eventos con Ionic 1, con REST API"
+    summary: "Realiza un App para eventos con Ionic 1, con REST API"
 # ==============================================================
 # Blog
 blog:
