--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ excerpt_separator: <!--summary-->
 banner_course:
   text: 'Hemos creado un increible curso de nuestra experiencia en Colombia, Chile, Bolivia y Peru.'
   btn_text: 'Ver Curso'
-  link: 'http://bootcampwithus.usefedora.com/p/curso-basico-ionic-2-0/'
+  url: 'http://bootcampwithus.usefedora.com/p/curso-profesional-ionic-2-0'
 # ==============================================================
 # Banner Slack
 banner_slack:
   title: 'Únete a nuestra comunidad'
   text: 'Únete a nuestro canal de slack y podras interactuar con toda la comunidad hispana en ionic.'
-  link: 'http://goo.gl/forms/ZCEc0cr3jydgK2wv1'
+  url: 'http://goo.gl/forms/ZCEc0cr3jydgK2wv1'
   btn_text: 'Unete'
 # ==============================================================
 # Menu Header
