--- a/_config.yml
+++ b/_config.yml
@@ -155,6 +155,11 @@ authors:
         icon: "fa-linkedin"
       - link: "https://www.facebook.com/daniel.l.sanchez.501"
         icon: "fa-facebook"
+  - id: "levanocarlos"
+    name: "Levano Carlos"
+    url: "/blog/authors/levanocarlos"
+    avatar: "https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/4/f/f/8/600_454640472.jpeg"
+    bio: "--"
   - id: "mayrititis"
     name: "Mayra Rodríguez"
     url: "/blog/authors/mayrititis"
