--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ authors:
   - id: "levanocarlos"
     name: "Levano Carlos"
     url: "/blog/authors/levanocarlos"
-    avatar: "https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/4/f/f/8/600_454640472.jpeg"
+    avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2Flevanocarlos.jpg"
     bio: "--"
   - id: "mayrititis"
     name: "Mayra Rodríguez"
