--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ authors:
   - id: "levanocarlos"
     name: "Levano Carlos"
     url: "/blog/authors/levanocarlos"
-    avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2Flevanocarlos.jpg"
+    avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2Flevanocarlos.jpg?alt=media"
     bio: "--"
   - id: "mayrititis"
     name: "Mayra Rodríguez"
