--- a/_config.yml
+++ b/_config.yml
@@ -164,8 +164,16 @@ authors:
   - id: "levanocarlos"
     name: "Levano Carlos"
     url: "/blog/authors/levanocarlos"
+    website: "http://calevano.github.io/"
     avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2Flevanocarlos.jpg?alt=media"
-    bio: "--"
+    bio: "Desarrollador Web, Ingeniero de Sistemas, amante de Laravel , IonicFramework, ReactNative, PHP, manoseando Android y Swift. Amante del café y series de Netflix."
+    social_links:
+      - link: "https://twitter.com/calevano"
+        icon: "fa-twitter"
+      - link: "https://www.linkedin.com/in/calevano/"
+        icon: "fa-linkedin"
+      - link: "https://github.com/calevano"
+        icon: "icon-social-octocat"
   - id: "mayrititis"
     name: "Mayra Rodríguez"
     url: "/blog/authors/mayrititis"
