--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ authors:
     bio: "Carlos Rojas es Google Product Strategy Expert. Cuando no esta dando charlas en conferencias sobre Angular, Ionic o TypeScript da cursos en Startupers Academy."
     social_links:
       - link: "https://twitter.com/carlosrojas_o"
-        icon: "fa-twitter"
+        icon: "icon-social-twitter"
       - link: "https://youtube.com/carlosrojas84"
         icon: "fa-youtube"
   - id: "daniel_lsanchez"
@@ -156,11 +156,11 @@ authors:
     bio: "Soy desarrollador de software enfocado en especializarme en desarrollo web y móvil, me gusta ayudar a las personas y dar el conocimiento que adquiero sin nada a cambio. Me apasiono por construir productos innovadores y que ayuden a la sociedad, me gustan las motos y salir a viajar en ellas."
     social_links:
       - link: "https://twitter.com/daniel_lsanchez"
-        icon: "fa-twitter"
+        icon: "icon-social-twitter"
       - link: "https://www.linkedin.com/in/daniel-londo%C3%B1o-61296b84"
-        icon: "fa-linkedin"
+        icon: "icon-linkedin"
       - link: "https://www.facebook.com/daniel.l.sanchez.501"
-        icon: "fa-facebook"
+        icon: "icon-social-facebook"
   - id: "levanocarlos"
     name: "Levano Carlos"
     url: "/blog/authors/levanocarlos"
@@ -169,9 +169,9 @@ authors:
     bio: "Desarrollador Web, Ingeniero de Sistemas, amante de Laravel , IonicFramework, ReactNative, PHP, manoseando Android y Swift. Amante del café y series de Netflix."
     social_links:
       - link: "https://twitter.com/calevano"
-        icon: "fa-twitter"
+        icon: "icon-social-twitter"
       - link: "https://www.linkedin.com/in/calevano/"
-        icon: "fa-linkedin"
+        icon: "icon-linkedin"
       - link: "https://github.com/calevano"
         icon: "icon-social-octocat"
   - id: "mayrititis"
